@@ -456,17 +456,30 @@ class EditPage {
 	}
 
 	/**
-	 * Return true if this page should be previewed when the edit form
-	 * is initially opened.
+	 * Should we show a preview when the edit form is first shown?
+	 *
 	 * @return bool
-	 * @private
 	 */
-	function previewOnOpen() {
-		global $wgUser;
-		return $this->section != 'new' &&
-			( ( $wgUser->getOption( 'previewonfirst' ) && $this->mTitle->exists() ) ||
-				( $this->mTitle->getNamespace() == NS_CATEGORY &&
-					!$this->mTitle->exists() ) );
+	private function previewOnOpen() {
+		global $wgRequest, $wgUser;
+		if( $wgRequest->getVal( 'preview' ) == 'yes' ) {
+			// Explicit override from request
+			return true;
+		} elseif( $wgRequest->getVal( 'preview' ) == 'no' ) {
+			// Explicit override from request
+			return false;
+		} elseif( $this->section == 'new' ) {
+			// Nothing *to* preview for new sections
+			return false;
+		} elseif( $this->mTitle->exists() && $wgUser->getOption( 'previewonfirst' ) ) {
+			// Standard preference behaviour
+			return true;
+		} elseif( !$this->mTitle->exists() && $this->mTitle->getNamespace() == NS_CATEGORY ) {
+			// Categories are special
+			return true;
+		} else {
+			return false;
+		}
 	}
 
 	/**
