@@ -128,6 +128,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Improved feedback on "rollback success" page
 * Show distinct 'namespaceprotected' message to users when namespace protection
   prevents page editing
+* (bug 9936) Per-edit suppression of preview-on-first edit with "preview=no"
+* Allow showing a one-off preview on first edit with "preview=yes"
 
 == Bugfixes since 1.10 ==
 
